# luna-assistant-ai-core

./: .drone.yml  LICENSE  README.md  labels.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: accessibility-feedback.yml  decision.yml  research.yml  rfc.yml
core/: Cargo.toml
core/src/: lib.rs
docs/: AGENT.md  AI-GOVERNANCE.md  AI-PM.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPER.md  PRIVACY.md  SECURITY.md  WORKFLOW.md
docs/DECISIONS/: ADR-0000-template.md  ADR-0001-base-rust-core.md  ADR-0002-async-event-bus.md  decision-note-0001-base-rust-core.md  index.md
docs/PROCESS/: ai-pm-checklist.md  ai-pm-playbook.md  decision-note-template.md  finance-checklist.md  legal-checklist.md  marketing-checklist.md  tech-checklist.md
scripts/: sync-labels.py
