[package]
name = "luna-core"
version = "0.1.0"
edition = "2021"
description = "Minimal core skeleton for Luna Assistant"
license = "MIT"

[lib]
name = "luna_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "time", "macros"] }
